Fixed priority not showing on NotePreview within Home route

--- a/src/styles/NotePreview.css
+++ b/src/styles/NotePreview.css
@@ -81,6 +81,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  color: black;
 }
 .note-preview__id-priority__priority p {
   margin: 0;
